# HSLU_ICS_H25

./: .gitignore  README.md  package-lock.json  package.json
DMath-Algo_H25/Algorithms-CSharp/: Algorithms.sln
DMath-Algo_H25/Algorithms-CSharp/Algorithms/: MergeSortAlgo.cs
FS26/Cyseco_FS26/Schulung/: index.html
FS26/Introl_FS26/sw03-cracking_lab/HashAlgo/: HashAlgo.sln
FS26/OSA_FS26/Einfuehrung-C/: CMakeLists.txt
FS26/OSA_FS26/Einfuehrung-C/sw09_einfuehrung/: CMakeLists.txt
FS26/OSA_FS26/Einfuehrung-C/sw10_einfuehrung2/: A1_ceasar-cipher.cpp  A2_TwoResultsPointer.cpp  A3_malloc.cpp  CMakeLists.txt  Pointer_Aufgabe.cpp  Pointer_CallByReference.cpp  Pointer_CallByValue.cpp
FS26/OSA_FS26/sw09_einfuehrung/: CMakeLists.txt
FS26/OSA_FS26/sw09_einfuehrung/Swap/: SimpleSwap.cpp
HS25/OOP_H25/IntelliJ/oop_exam_prep/: .geminiignore  LICENSE.txt  README.md  nbactions.xml  pom.xml
HS25/OOP_H25/IntelliJ/oop_guisamples/: README.md  pom.xml
HS25/OOP_H25/IntelliJ/oop_maven_aufgaben/: .gitlab-ci.yml  Dockerfile  pom.xml  (+2 more)
Introl_FS25/sw03-cracking_lab/HashAlgo/: .gitignore
Introl_FS25/sw03-cracking_lab/HashingAlgorithm/: HashingAlgorithm.sln
OOP_H25/IntelliJ/oop_exam_prep/: .geminiignore  LICENSE.txt  README.md  pom.xml
OOP_H25/IntelliJ/oop_guisamples/: README.md  pom.xml
OOP_H25/IntelliJ/oop_maven_aufgaben/: .gitignore
OOP_H25/IntelliJ/oop_maven_template/: LICENSE.txt  devshell.sh  pom.xml
OOP_H25/Zusatzmaterial/oop_maven_template/: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE.txt  README.md  devshell.cmd  devshell.sh  pom.xml
WebT_FS25/: .gitignore
(+434 files in other folders)
